[tool.poetry]
name = "explain.dalibo.com"
description = ""
authors = []
version = "0.1.0"

[tool.poetry.dependencies]
python = ">3.10"
flask = "2.1.3"
sqlalchemy = "1.4"
psycopg2-binary = "2.9.3"
flask-sqlalchemy = "2.5.1"
flask-migrate = "3.1.0"
flask-wtf = "1.0.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
